# insanely-fast-whisper-rocm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  Makefile  README.md  constraints-no-heavy.txt  docker-compose.dev.yaml  docker-compose.yaml  project-overview.md  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-reviewer.txt  requirements-rocm-v6-4-1.txt  requirements-rocm-v7-2.txt  requirements.txt
custom_output/: result.json
insanely_fast_whisper_rocm/: __init__.py  __main__.py  rocm_bootstrap.py
insanely_fast_whisper_rocm/api/: __main__.py  responses.py  routes.py
insanely_fast_whisper_rocm/benchmarks/: collector.py
insanely_fast_whisper_rocm/cli/: commands.py  common_options.py  facade.py
insanely_fast_whisper_rocm/core/: __init__.py  asr_backend.py  formatters.py  orchestrator.py  pipeline.py  segmentation.py  utils.py
insanely_fast_whisper_rocm/core/integrations/: stable_ts.py
insanely_fast_whisper_rocm/utils/: __init__.py  benchmark.py  constant.py  constants.py  download_hf_model.py  env_loader.py  file_utils.py  filename_generator.py  hf_cache.py  rocm_preflight.py  rocm_report.py  torch_runtime.py
insanely_fast_whisper_rocm/webui/: app.py  downloads.py  handlers.py  models.py  progress.py  ui.py
scripts/: benchmark.sh  clean_codebase.sh  local-ci.sh  setup_config.py
src/insanely_fast_whisper_rocm/: __init__.py  __main__.py
src/insanely_fast_whisper_rocm/api/: __init__.py  app.py  dependencies.py  models.py  responses.py  routes.py
src/insanely_fast_whisper_rocm/audio/: conversion.py  processing.py  vad.py
src/insanely_fast_whisper_rocm/cli/: cli.py  commands.py  common_options.py  facade.py
src/insanely_fast_whisper_rocm/core/: __init__.py  asr_backend.py  backend_cache.py  formatters.py  orchestrator.py  pipeline.py  segmentation.py
src/insanely_fast_whisper_rocm/core/integrations/: __init__.py  alass.py  stable_ts.py
src/insanely_fast_whisper_rocm/utils/: __init__.py  constant.py  constants.py  download_hf_model.py  env_loader.py  file_utils.py  rocm_report.py  srt_quality.py
src/insanely_fast_whisper_rocm/webui/: app.py  downloads.py  handlers.py  merge_handler.py  models.py  ui.py  utils.py  zip_creator.py
tests/: conftest.py  test_cuda.py  test_repo_contracts.py  test_webui.py
tests/api/: test_api.py  test_api_integration.py  test_api_modules.py  test_api_short.sh  test_dependencies.py  test_models.py  test_response_formats.py  test_responses.py  test_routes.py
tests/audio/: test_audio_processing.py  test_vad.py
tests/cli/: test_cli.py  test_cli_exports.py  test_cli_gpu_smoke.py  test_cli_output_benchmarks.py  test_cli_real_media_smoke.py  test_commands.py
tests/core/: test_asr_backend_device_and_init.py  test_asr_backend_word_timestamps.py  test_backend_cache.py  test_formatters.py  test_pipeline_coverage.py  test_stable_ts.py  test_whisper_pipeline_chunking.py
tests/core/integrations/: test_alass.py
tests/utils/: test_centralized_configuration.py  test_download_hf_cache_resolution.py  test_filename_generator.py  test_hf_cache.py  test_rocm_preflight.py  test_rocm_report.py
tests/webui/: test_app.py  test_handlers.py  test_ui.py  test_video_upload.py  test_webui.py  test_webui_handlers.py
transcripts/: test_audio_1.0s_transcribe_20260322T233226Z.json
